# Real-Time-Market-Data-Feed-Handler-

./: CMakeLists.txt  PRD.md  SENIOR_DEV_SUPPORT.md  dashboard-mockup.html  progress.txt  ralph.ps1
.cache/clangd/index/: alpha_combiner.cpp.461DD6CCD9D6232F.idx  alpha_combiner.hpp.E01EED3808DC732F.idx  bar_aggregator.cpp.A4AD8E8BC48B8B6F.idx  bar_aggregator.hpp.480B8104115E814C.idx  batcher.cpp.3955397F988F66AF.idx  batcher.hpp.0689210BB2F43B0B.idx  binary_writer.cpp.50030C4752E70C39.idx  binary_writer.hpp.1D4504CE3A194804.idx  bollinger.cpp.E5390B0D551C0834.idx  bollinger.hpp.6E92560339C32A7C.idx  book_depth_ratio.cpp.945C1B17459D7210.idx  book_depth_ratio.hpp.A65093B9B1F7A3A9.idx  book_manager.cpp.90C92A97B728AE0C.idx  book_manager.hpp.EAEED292F897482A.idx  book_stage.cpp.A359F4121784663A.idx  circuit_breaker.cpp.0371F4D47EEFCC2D.idx  circuit_breaker.hpp.E755688FBC1871AE.idx  clock.hpp.EA969769BA23BF78.idx  compression.cpp.6565CD554E32960D.idx  compression.hpp.843DD142C4BD4AF6.idx  concentration_limit.cpp.63B940E421A59FE3.idx  concentration_limit.hpp.5E44A08832925956.idx  config.cpp.AB0FB322545BCD10.idx  config.hpp.1920625BF1121C1B.idx  console_display.cpp.9CB8DCF0FD89D1F3.idx  console_display.hpp.3FA8BE03ED5E2955.idx  constants.hpp.8226284E07163922.idx  consumer_stage.cpp.6C59CD474256169E.idx  csv_logger.cpp.E0AFA17E23496DB2.idx  csv_logger.hpp.FDD5894A8AA8EF86.idx  csv_writer.cpp.E231176A55BF5B31.idx  csv_writer.hpp.C0EF30506F921CA6.idx  data_types.hpp.A317C356C5EB2EAB.idx  ema.cpp.5129C8480BE48DD7.idx  ema.hpp.9B7079FE8662DC69.idx  encoder.hpp.3C491E83622FD0DF.idx  error_codes.hpp.57BC408FD6B8BCF1.idx  event_bus.hpp.29FEE1F784B6AAC1.idx  execution_algo.cpp.D36F4F5AE14F52B2.idx  execution_algo.hpp.0FC761DCFE7C00D3.idx  (+230 more)
bench/: bench_encode_decode.cpp  bench_order_book.cpp  bench_pipeline.cpp  bench_spsc_queue.cpp
config/: default_scenario.json  quantflow.yaml  replay_scenario.json  scenario.json  stress_scenario.json
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  PROJECT_MEMORY_ALLOCATOR.md  PROJECT_TCP_SERVER.md  notas-pt.md
docs/plans/: 2026-02-24-feed-handler-design.md  2026-02-24-feed-handler-implementation.md
docs/portfolio/: FEED_HANDLER_STANDALONE_ARCHITECTURE.md  MEMORY_ALLOCATOR_ARCHITECTURE.md  TCP_SERVER_ARCHITECTURE.md
include/mdfh/common/: aligned_alloc.hpp  clock.hpp  constants.hpp  error_codes.hpp  types.hpp
include/mdfh/consumer/: alert_monitor.hpp  console_display.hpp  csv_logger.hpp  latency_histogram.hpp  stats_collector.hpp  throughput_tracker.hpp
include/mdfh/core/: book_manager.hpp  order.hpp  order_book.hpp  order_store.hpp  pipeline.hpp  pipeline_types.hpp  price_level.hpp  spsc_queue.hpp
include/mdfh/network/: multicast_receiver.hpp  multicast_sender.hpp  socket_config.hpp
include/mdfh/protocol/: batcher.hpp  encoder.hpp  frame_parser.hpp  messages.hpp  sequence.hpp  validator.hpp
include/mdfh/simulator/: market_simulator.hpp  order_generator.hpp  price_walk.hpp  scenario_loader.hpp  sim_matching_engine.hpp  sim_order_book.hpp
include/mdfh/utils/: format_helpers.hpp  signal_handler.hpp  thread_pinning.hpp
include/qf/common/: aligned_alloc.hpp  clock.hpp  config.hpp  constants.hpp  error_codes.hpp  logging.hpp  thread_utils.hpp  types.hpp
include/qf/consumer/: alert_monitor.hpp  console_display.hpp  csv_logger.hpp  latency_histogram.hpp  stats_collector.hpp  throughput_tracker.hpp
include/qf/core/: book_manager.hpp  event_bus.hpp  mpsc_queue.hpp  object_pool.hpp  order.hpp  order_book.hpp  order_store.hpp  pipeline.hpp  pipeline_types.hpp  price_level.hpp  ring_buffer.hpp  spsc_queue.hpp
include/qf/data/: data_types.hpp
include/qf/network/: multicast_receiver.hpp  multicast_sender.hpp  socket_config.hpp  tcp_client.hpp  tcp_server.hpp
include/qf/oms/: fill_manager.hpp  (+5 more)
src/consumer/: alert_monitor.cpp  console_display.cpp  csv_logger.cpp  latency_histogram.cpp  stats_collector.cpp  throughput_tracker.cpp
src/core/: book_manager.cpp  event_bus.cpp  order_book.cpp  order_store.cpp  pipeline.cpp  price_level.cpp
src/handler/: book_stage.cpp  consumer_stage.cpp  main.cpp  network_stage.cpp  parser_stage.cpp
src/infra/: config.cpp  logging.cpp
src/network/: multicast_receiver.cpp  multicast_sender.cpp  tcp_client.cpp  tcp_server.cpp
src/oms/: fill_manager.cpp  order_id_generator.cpp  order_manager.cpp  order_router.cpp  order_validator.cpp
src/protocol/: batcher.cpp  frame_parser.cpp  sequence.cpp  validator.cpp
src/risk/: post_trade_risk.cpp  pre_trade_risk.cpp
src/signals/: signal_engine.cpp  signal_registry.cpp
src/simulator/: main.cpp  market_simulator.cpp  multi_asset_sim.cpp  news_event_generator.cpp  order_generator.cpp  participant_model.cpp  price_walk.cpp  scenario_loader.cpp  sim_matching_engine.cpp  sim_order_book.cpp  volatility_regime.cpp
src/strategy/: strategy_engine.cpp  strategy_registry.cpp
tests/: test_alpha_combiner.cpp  test_bar_aggregator.cpp  test_bollinger.cpp  test_circuit_breaker.cpp  test_compression.cpp  test_ema.cpp  test_feature_normalizer.cpp  test_feature_store.cpp  test_loss_limit.cpp  test_macd.cpp  test_market_making.cpp  test_microprice.cpp  test_order_flow_imbalance.cpp  test_order_manager.cpp  test_order_sizer.cpp  test_pnl_calculator.cpp  test_position_limit.cpp  test_position_tracker.cpp  test_replay_engine.cpp  test_rsi.cpp  test_signal_engine.cpp  test_sim_exchange.cpp  test_state_machine.cpp  test_stub.cpp  test_tick_recorder.cpp  test_twap.cpp  test_var_calculator.cpp  test_vwap.cpp  test_zscore.cpp
tests/consumer/: test_alert_monitor.cpp  test_latency_histogram.cpp  test_throughput_tracker.cpp
tests/core/: test_book_manager.cpp  test_order_book.cpp  test_order_store.cpp  test_pipeline.cpp  test_spsc_queue.cpp
tests/integration/: test_deterministic_replay.cpp  test_sim_to_handler.cpp
tests/protocol/: test_batcher.cpp  test_encode_decode.cpp  test_frame_parser.cpp  test_sequence.cpp  test_validator.cpp
tests/simulator/: test_order_generator.cpp  test_price_walk.cpp  test_scenario_loader.cpp  test_sim_matching_engine.cpp  test_sim_order_book.cpp
(+167 files in other folders)
